# efg

./: -  .gitattributes  .gitignore  Efg.lean  Main.lean  Makefile  README.md  efg.cabal  flake.nix  hie.yaml  lakefile.lean  let.efg  syntax.md  t.efg  types.efg
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link  flake-profile-4-link
.github/workflows/: ci.yaml  haskell.yaml
efg/: Main.hs
src/: Efg.hs
src/Efg/: Errors.hs  Parser.hs  Pretty.hs  Syntax.hs  Type.hs
src/Efg/Interpreter/: Normalize.hs  Value.hs
src/Efg/Parser/: ConcreteSyntax.hs  Lexer.hs  Lexing.hs  Location.hs  Parsing.hs  SyntaxParser.hs
tasty/: Main.hs
